# openfisca-tunisie-entreprises

./: .gitignore  .mcp.json  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Makefile  conftest.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  is-version-number-acceptable.sh  pyproject_version.py
.github/hooks/: pre-push
.github/workflows/: auto-changelog.yml  workflow.yml
.gitlab/issue_templates/: bug.md
openfisca_tunisie_entreprises/: __init__.py  entities.py  tunisie_entreprises_taxbenefitsystem.py
openfisca_tunisie_entreprises/parameters/impot_societes/: acomptes_provisionnels.yaml  agriculture_peche.yaml  amortissement_supplementaire.yaml  avance_importation.yaml  deduction_export.yaml  deduction_interets_verts.yaml  minimum_impot.yaml  minimum_impot_absolu.yaml  minimum_impot_absolu_taux_reduit.yaml  minimum_impot_taux_reduit.yaml  nouvelles_entreprises.yaml
openfisca_tunisie_entreprises/parameters/impot_societes/taux/: taux_intermediaire.yaml  taux_majore.yaml  taux_normal.yaml  taux_reduit.yaml
openfisca_tunisie_entreprises/parameters/retenues_source/: retenues_capitaux_mobiliers.yaml  retenues_dividendes.yaml  retenues_honoraires.yaml  retenues_loyers.yaml  retenues_marches.yaml
openfisca_tunisie_entreprises/parameters/taxes_entreprises/: foprolos.yaml  tcl.yaml  tfp.yaml
openfisca_tunisie_entreprises/tests/: __init__.py  avantages_is.yaml  compte_resultat.yaml  corrections_et_ajouts_is.yaml  is.yaml  retenues_source.yaml  taxes_salaires.yaml  tcl.yaml  test_avantages_fiscaux.py  test_is.py  test_retenues_source.py  test_taxes_salaires.py  test_tcl.py
openfisca_tunisie_entreprises/variables/: __init__.py  caracteristiques_entreprise.py
openfisca_tunisie_entreprises/variables/avantages_fiscaux/: __init__.py  avantages_investissement.py
openfisca_tunisie_entreprises/variables/compte_resultat/: __init__.py  charges.py  produits.py  resultats.py
openfisca_tunisie_entreprises/variables/impots/: __init__.py  is_.py  reintegrations_deductions.py  tcl.py
openfisca_tunisie_entreprises/variables/retenues_source/: __init__.py  retenues_source.py
openfisca_tunisie_entreprises/variables/taxes_assises_salaires/: __init__.py  foprolos.py  tfp.py  total_taxes_salaires.py
